k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-edilek-api
  labels:
    app: smart-edilek-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: smart-edilek-api
  template:
    metadata:
      labels:
        app: smart-edilek-api
    spec:
      containers:
      - name: smart-edilek-api
        image: docker-r.nexus.s3t.co/smart/edilek:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          - name: httpsport
            containerPort: 8443
            protocol: TCP
        resources:
          requests:
            memory: "512Mi"  # Minimum RAM ihtiyacı
            cpu: "250m"      # Minimum CPU ihtiyacı
          limits:
            memory: "1024Mi" # Maksimum RAM
            cpu: "500m"      # Maksimum CPU
        volumeMounts:
          - name: my-certificate-volume
            mountPath: "/etc/certs"
      volumes:
        - name: my-certificate-volume
          secret:
            secretName: s3t-wildcard-cert-prod-p12
      imagePullSecrets:
        - name: nexus-s3t-co-docker-config
