k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-edilek-api
  labels:
    app: smart-edilek-api
spec:
  ports:
    - name: httpport
      port: 8080
      targetPort: 8080
    - name: httpsport
      port: 8443
      targetPort: 8443
  selector:
    app: smart-edilek-api
  type: ClusterIP
